--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
