--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@nextui-org/date-input": "^2.0.3",
     "@nextui-org/date-picker": "^2.0.4",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/spinner": "^2.0.28",
     "@nextui-org/system": "^2.1.1",
     "@nextui-org/theme": "^2.2.1",
     "@prisma/client": "^5.9.1",
