--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/system": "^2.1.1",
     "@nextui-org/theme": "^2.2.1",
     "@prisma/client": "^5.9.1",
+    "aws-sdk": "^2.1620.0",
     "bcrypt": "^5.1.1",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.3",
